feat: Implement file upload
Also makes the following changes:

- Add methods become `POST` rather than `PUT` to align with standard
  CRUD patterns.
- Add tests for extraction from bytes, and update unit tests to use
  those and the "small" PDF.
- Use "file-type detection" rather than trusting mime types. This is
  essential when receiving arbitrary bytes.

This closes #74
